--- a/public/templates/sing-up.html
+++ b/public/templates/sing-up.html
@@ -1,21 +1,21 @@
-<div id="register">
+<div id="sing-up">
     <div>
-        <h1 >Welcome to Goodsights!</h1>
-        <p class="sub-heading">Here we dicover new places and seek adventure</p>
+        <h1 >Добре дошли в Goodsights!</h1>
+        <p class="sub-heading">Тук откриваме нови невероятни места и търсим нови авантюри</p>
     </div>
     <div >
         <div class="wrapper">
-            <h2 >Sign-up to view all our recomendations for you</h2>
-            <label> Username </label>
-            <input placeholder="Username" type="text" class="normal" id="tb-user">
-            <label> Password </label>
-            <input placeholder="Password" type="password" class="normal" id="tb-pass">
-            <label> Repeat password </label>
-            <input placeholder="Confirm Password" type="password" class="normal" id="tb-conf-pass">
+            <h2 >Регистрирайте се и станете част от нашето пътуващо семейство!</h2>
+            <label for="username-input"> Потребителско име </label>
+            <input placeholder="Username" type="text" id="username-input">
+            <label for="password-input"> Парола </label>
+            <input placeholder="Password" type="password" id="password-input">
+            <label for="password-repeat"> Повторете паролата </label>
+            <input placeholder="Confirm Password" type="password" id="password-repeat">
 
             <p class="error hidden"></p>
-            <button id="btn-register" >Sign-up</button>
-            <a href="#/login">Already have an account?</a>
+            <button id="btn-register" >Регистрирай се</button>
+            <a href="#/login">Вече имате регистрация?</a>
         </div>
     </div>
 </div>
