--- a/public/templates/team.html
+++ b/public/templates/team.html
@@ -1,1 +1,21 @@
-<!--TO DO-->
+<div >
+    <h3 >Екипът, който се грижи всичко това да е възможно:</h3>
+
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-md-4">
+                <strong class="user-pic">gizdava </br> Гиздава Генева </strong>
+                </br>
+                <img  src="../../images/gizi.jpg">
+            </div>
+            <div class=>
+                <strong class="user-pic ">Mihaela_Ivanova </br> Михаела Иванова </strong>
+                </br>
+                <img src="../../images/mishi.jpg">
+            </div>
+        </div>
+        <p >
+            Щастливи сме, да имаме всички вас, с които заендо да споделяме страстта си по пътуванията. Моля свържете се с нас за всякакви въпроси, препоръки или коментари, които имате. Ще бъдем повече от радостни заеднод а преоткриваме нови красоти! :)
+        <p>
+    </div>
+</div>
