--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -1,53 +1,48 @@
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="email">Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="phone">Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="message">Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+   <div class="contact-container">
+    <div>
+        <div class="box-header">
+            <h2>Свържете се с нас</h2>
         </div>
-    </section>
+        <form action="mailto:goodsights@gmail.com" method="POST" enctype="text/plain">
+            <label for="email">E-mail</label>
+            <input name="email" type="email" autofocus="autofocus" id="email">
+            <label for="subject">Тема</label>
+            <input name="subject" type="subject" id="subject">
+            <label for="message">Съобщение</label>
+            <textarea name="message" type="message" id="message"></textarea>
+            <input id="button" type="submit" value="Send message">
+
+            <label for="address">Адрес: 
+                </br>
+               Софияa, ул. Дондуков 22
+                </br>
+            </label>
+            <div id="map"></div>
+        </form>
+    </div>
+</div>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeihtMtOGzNUmjv6dlbGObs-JKbb7E5Oc&callback=initializeMap">
+</script>
+
+<script>
+    function initializeMap() {
+        let coordinates = {lat: 42.698179, lng: 23.329264};
+
+        let map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: coordinates
+        });
+
+        let marker = new google.maps.Marker({
+          position: coordinates,
+          map: map
+        });
+
+        google.maps.event.addListenerOnce(map, 'idle', function() {
+            setTimeout(() => {
+                google.maps.event.trigger(map, 'resize');
+            }, 1000);
+        });
+    }
+    </script>
