Modifications in userController.js and userRequester.js

--- a/public/templates/team.html
+++ b/public/templates/team.html
@@ -1,5 +1,5 @@
 <div >
-    <h3 >Екипът, който се грижи всичко това да е възможно:</h3>
+    <h3 >The team that makes all this possible for you:</h3>
 
     <div class="modal-body">
         <div class="row">
@@ -15,7 +15,7 @@
             </div>
         </div>
         <p >
-            Щастливи сме, да имаме всички вас, с които заендо да споделяме страстта си по пътуванията. Моля свържете се с нас за всякакви въпроси, препоръки или коментари, които имате. Ще бъдем повече от радостни заеднод а преоткриваме нови красоти! :)
+            We are happy have all of you and share our passion together. Please contact us for any recomendations and coments you may have. We will be more than happy to find more adventurers among you! :)
         <p>
     </div>
 </div>
