--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -20,6 +20,6 @@
             Всичко това е защото се наслаждаваме на красотата, която светът ни предоставя. Любовта ни към непознатото, неразкритите хоризонти и необятността на уроците, местата и преживяванията са нашите вдъхновения и двигателя на действията ни.
             Радваме се да споделяме тази емоция с хора, които изпитват същото тръпнещо чувсто на задовоство и детска радост от всяко преживяване. Всички дни са възможности за нови открития, а тък само споделяме опита от вече направени такива и тайно набелязваме нови и по-прекрасни дестинации, които да превърнем в красиви спомени :)
         </p>
-        <img src="../images/sky.jpg" alt="sky-is-not-the-limit">
+        <img src="../../images/sky.jpg" alt="sky-is-not-the-limit">
     </div>
 </div>
