Add team and about

--- a/public/templates/sights.html
+++ b/public/templates/sights.html
@@ -1,8 +1,9 @@
-6<div >
+<div >
     {{#Results}}
      <div>
         <div>
-            <div>{{name}}</div>
+            <div>{{name}} </div>
+            <p>SIGHTSDDDDDDDDDDDDDDDDDDDDDDDDDDDSSSSSSSSSSSSssssaSKJHDUKASHGFUISADYUFSDGFSHDFGHLIAFS</p>
             <h6>Location: {{location}}</h6>
             <img src="{{ImgSrc}}" alt="{{name}}">
             <p><a class="btn btn-success" href="#details/{{id}}" role="button">View details &raquo;</a></p>
