--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -1,20 +1,20 @@
    <div class="contact-container">
     <div>
         <div class="box-header">
-            <h2>Contact us</h2>
+            <h2>Свържете се с нас</h2>
         </div>
         <form action="mailto:goodsights@gmail.com" method="POST" enctype="text/plain">
-            <label for="email">E-mail</label>
+            <label for="email">E-мейл</label>
             <input name="email" type="email" autofocus="autofocus" id="email">
-            <label for="subject">Subject</label>
+            <label for="subject">Темаt</label>
             <input name="subject" type="subject" id="subject">
-            <label for="message">Message</label>
+            <label for="message">Съобщение</label>
             <textarea name="message" type="message" id="message"></textarea>
             <input id="button" type="submit" value="Send message">
 
-            <label for="address">Address: 
+            <label for="address">Адресс: 
                 </br>
-                Sofia, ul. Dondukov 22
+                София, ул. Дондуков 22
                 </br>
             </label>
             <div id="map"></div>
