--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,20 +1,20 @@
 <div id="sing-in">
     <div>
-        <h1>Welcome to Goodsights!</h1>
-        <p>Here we dicover new places and seek adventure.</p>
+        <h1>Добре дошли в Goodsights!</h1>
+        <p>Тук откриваме нови дестинации за покоряваме и споделяме приключенския си опит.</p>
     </div>
     <div>
         <div>
-            <h2>Sing-in to view all our recomendations for you!</h2>
+            <h2>Влезте, за да видиш всички преложения за теб!</h2>
 
-            <label for="username-input"> Username </label>
-            <input placeholder="Username" type="text" id="username-input">
-            <label for="password-input"> Password </label>
-            <input placeholder="Password" type="password" id="password-input">
+            <label for="username-input"> Потребителско име </label>
+            <input placeholder="Потребителско име" type="text" id="username-input">
+            <label for="password-input"> Парола </label>
+            <input placeholder="Парола" type="password" id="password-input">
             <p class="error hidden"></p>
-            <button id="btn-login">Login</button>
-            <a href="#/error404">Forgot your password?</a>
-            <a href="#/register">Don't have an account?</a>
+            <button id="btn-login">Вход</button>
+            <a href="#/error404"> Забравена парола?</a>
+            <a href="#/register">Все още нямате регистрация?</a>
         </div>
     </div>
 </div>
