--- a/public/templates/sightDetail.html
+++ b/public/templates/sightDetail.html
@@ -5,11 +5,11 @@
         </div>        
         <div class="col-lg-6"> 
             <h2>{{name}}</h2>
-             <p>Location: {{location}}</p>
+             <p>Местоположение: {{location}}</p>
             <p>{{description}}</p>
         </div>
          <div class="buttons"> 
-            <button type="button"> Add To Favorites
+            <button type="button"> Добави в любими
             </button>
         </div>
     </div>   
