--- a/public/templates/team.html
+++ b/public/templates/team.html
@@ -1,5 +1,5 @@
 <div >
-    <h3 >The team that makes all this possible for you:</h3>
+    <h3 >Екипът, който прави всичко това възможно:</h3>
 
     <div class="modal-body">
         <div class="row">
@@ -15,7 +15,7 @@
             </div>
         </div>
         <p >
-            We are happy have all of you and share our passion together. Please contact us for any recomendations and coments you may have. We will be more than happy to find more adventurers among you! :)
+            Радваме се да бъдем част от това и да споделяме страстта си към новостите и далечните дестинации с всички вас. Моля, свържете се с нас за всякакви въпроси, препоръки или просто за споделяне на страхотни преживявания. Ще сме повече от щастливи да откриваме заедно още приятели с любов към пътешествията и природните красоти! :)
         <p>
     </div>
 </div>
