--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -1,21 +1,21 @@
 <div id="register">
     <div>
-        <h1 >Welcome to Goodsights!</h1>
-        <p class="sub-heading">Here we dicover new places and seek adventure</p>
+        <h1 >Добре дошли в Goodsights!</h1>
+        <p class="sub-heading">Тук откриваме нови дестинации за покоряваме и споделяме приключенския си опит.</p>
     </div>
     <div >
         <div class="wrapper">
-            <h2 >Sign-up to view all our recomendations for you</h2>
-            <label> Username </label>
-            <input placeholder="Username" type="text" class="normal" id="tb-user">
-            <label> Password </label>
-            <input placeholder="Password" type="password" class="normal" id="tb-pass">
-            <label> Repeat password </label>
-            <input placeholder="Confirm Password" type="password" class="normal" id="tb-conf-pass">
+            <h2 >Регистрирайте се и станете част от нашето туристическо семейство!</h2>
+            <label> Потребителско име </label>
+            <input placeholder="Потребителско име" type="text" class="normal" id="tb-user">
+            <label> Парола </label>
+            <input placeholder="Парола" type="password" class="normal" id="tb-pass">
+            <label> Повторете паролата </label>
+            <input placeholder="Повторете паролата" type="password" class="normal" id="tb-conf-pass">
 
             <p class="error hidden"></p>
-            <button id="btn-register" >Sign-up</button>
-            <a href="#/login">Already have an account?</a>
+            <button id="btn-register" >Регистрация</button>
+            <a href="#/login">Вече имате регистрация?</a>
         </div>
     </div>
 </div>
