--- a/public/templates/sights.html
+++ b/public/templates/sights.html
@@ -3,10 +3,9 @@
      <div>
         <div>
             <div>{{name}} </div>
-            <p>SIGHTSDDDDDDDDDDDDDDDDDDDDDDDDDDDSSSSSSSSSSSSssssaSKJHDUKASHGFUISADYUFSDGFSHDFGHLIAFS</p>
-            <h6>Location: {{location}}</h6>
+            <h6>Местоположение: {{location}}</h6>
             <img src="{{ImgSrc}}" alt="{{name}}">
-            <p><a class="btn btn-success" href="#details/{{id}}" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-success" href="#details/{{id}}" role="button">Виж още &raquo;</a></p>
         </div>
     </div>  
     {{/Results}}
