Add LocalStorage and Remember me btn.

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -11,6 +11,8 @@
             <input placeholder="Потребителско име" type="text" id="username-input">
             <label for="password-input"> Парола </label>
             <input placeholder="Парола" type="password" id="password-input">
+            <label for="remember"> Запомни ме</label>
+            <input type="checkbox" id="remember">
             <p class="error hidden"></p>
             <button id="btn-login">Вход</button>
             <a href="#/error404"> Забравена парола?</a>
