--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,34 +1,34 @@
 <div id="content" class="col-sm-12 col-xs-12 col-md-12 col-lg-12 col-centered">
-    <link rel="stylesheet" href="./../assets/css/home.css">
+    <!--<link rel="stylesheet" href="./../assets/css/home.css">-->
 
     <div id="carousel-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-generic" data-slide-to="1" class=""></li>
-            <li data-target="#carousel-generic" data-slide-to="2" class=""></li>
-            <li data-target="#carousel-generic" data-slide-to="3" class=""></li>
+            <li data-target="#carousel-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-generic" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="../images/landscape02.jpg">
+                <img src="../images/carusel/landscape01.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="../images/landscape02.jpg">
+                <img src="../images/carusel/landscape02.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="../images/landscape03.jpg">
+                <img src="../images/carusel/landscape03.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="../images/landscape04.jpg">
+                <img src="../images/carusel/landscape04.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
@@ -59,3 +59,4 @@
         </div>
     </div>
 </div>
+<script src="../../libs/bootstrap/dist/js/bootstrap.min.js"></script>
