--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,5 +1,5 @@
 <div id="content" class="col-sm-12 col-xs-12 col-md-12 col-lg-12 col-centered">
-    <!--<link rel="stylesheet" href="./../assets/css/home.css">-->
+    <link rel="stylesheet" href="../css/home.css">
 
     <div id="carousel-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -13,22 +13,22 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="../images/carusel/landscape01.jpg" class="img-responsive">
+                <img src="../images/carusel/landscape011.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="../images/carusel/landscape02.jpg" class="img-responsive">
+                <img src="../images/carusel/landscape012.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="../images/carusel/landscape03.jpg" class="img-responsive">
+                <img src="../images/carusel/landscape013.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="../images/carusel/landscape04.jpg" class="img-responsive">
+                <img src="../images/carusel/landscape014.jpg" class="img-responsive">
                 <div class="carousel-caption">
                 </div>
             </div>
@@ -44,13 +44,12 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
-    <div class="jumbotron text-center">
+    <header>
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <h1 class="name">Имаш душа на пътешественик?</h1>
+                        <h3 class="name">Имаш душа на пътешественик?</h3>
                         <hr class="star-light">
                         <span class="skills">Тук си на правилното място!</span>
                     </div>
@@ -58,5 +57,8 @@
             </div>
         </div>
     </div>
+    </header>
+
+
 </div>
 <script src="../../libs/bootstrap/dist/js/bootstrap.min.js"></script>
