--- a/public/templates/sights.html
+++ b/public/templates/sights.html
@@ -1,12 +1,3 @@
 <div >
-    {{#Results}}
-     <div>
-        <div>
-            <div>{{name}} </div>
-            <h6>Местоположение: {{location}}</h6>
-            <img src="{{ImgSrc}}" alt="{{name}}">
-            <p><a class="btn btn-success" href="#details/{{id}}" role="button">Виж още &raquo;</a></p>
-        </div>
-    </div>  
-    {{/Results}}
+ MOLQ TE TRYGNI
 </div>
