--- a/public/templates/sightsAll.html
+++ b/public/templates/sightsAll.html
@@ -1,42 +1,40 @@
+<link rel="stylesheet" href="../css/categories.css">
+
 <div class="row">
-    <div class="col-sm-4 portfolio-item">
+    <div class="col-sm-6 portfolio-item">
         <a href="#/sights" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
-                    <i class="fa fa-search-plus fa-3x"></i>
                 </div>
             </div>
             <p>Планини</p>
-            <img src="images/mountain-logo.png" class="img-responsive" alt="mountain">
+            <img src="images/mountain-logo.jpg" class="img-responsive" alt="mountain">
         </a>
     </div>
-    <div class="col-sm-4 portfolio-item">
+    <div class="col-sm-6 portfolio-item">
         <a href="#/sights" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
-                    <i class="fa fa-search-plus fa-3x"></i>
                 </div>
             </div>
             <p>Пещери</p>
             <img src="images/cave-logo.jpg" class="img-responsive" alt="cave">
         </a>
     </div>
-    <div class="col-sm-4 portfolio-item">
+    <div class="col-sm-6 portfolio-item">
         <a href="#/sights" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
-                    <i class="fa fa-search-plus fa-3x"></i>
                 </div>
             </div>
             <p>Водопади</p>
             <img src="images/waterfalll-logo.jpg" class="img-responsive" alt="Circus tent">
         </a>
     </div>
-    <div class="col-sm-4 portfolio-item">
+    <div class="col-sm-6 portfolio-item">
         <a href="#/sights" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
-                    <i class="fa fa-search-plus fa-3x"></i>
                 </div>
             </div>
             <p>Плажове</p>
