--- a/public/templates/sights.html
+++ b/public/templates/sights.html
@@ -1,5 +1,5 @@
 <div >
-    {{#Results}}
+    {{#Sights}}
      <div>
         <div>
             <div>{{name}} </div>
@@ -8,5 +8,5 @@
             <p><a class="btn btn-success" href="#details/{{id}}" role="button">Виж още &raquo;</a></p>
         </div>
     </div>  
-    {{/Results}}
+    {{/Sights}}
 </div>
