Register styles added

--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -1,20 +1,26 @@
-<div id="register">
+ <link rel="stylesheet" href="../css/register.css">
+<div id="sing-up">
     <div>
         <h1 >Добре дошли в Goodsights!</h1>
         <p class="sub-heading">Тук откриваме нови дестинации за покоряваме и споделяме приключенския си опит.</p>
     </div>
     <div >
         <div class="wrapper">
-            <h2 >Регистрирайте се и станете част от нашето туристическо семейство!</h2>
             <label> Потребителско име </label>
+            <br/>
             <input placeholder="Потребителско име" type="text" class="normal" id="tb-user">
+            <br/>
             <label> Парола </label>
+            <br/>
             <input placeholder="Парола" type="password" class="normal" id="tb-pass">
+            <br/>
             <label> Повторете паролата </label>
+            <br/>
             <input placeholder="Повторете паролата" type="password" class="normal" id="tb-conf-pass">
-
+            <br/>
             <p class="error hidden"></p>
-            <button id="btn-register" >Регистрация</button>
+            <button class="btn-default" >Регистрация</button>
+            <br/>
             <a href="#/login">Вече имате регистрация?</a>
         </div>
     </div>
