--- a/public/templates/team.html
+++ b/public/templates/team.html
@@ -1,14 +1,16 @@
-<div >
+<link rel="stylesheet" href="../css/team.css">
+
+<div id="the-team">
     <h3 >Екипът, който прави всичко това възможно:</h3>
 
     <div class="modal-body">
-        <div class="row">
-            <div class="col-md-4">
+        <div class="row" id="user-info">
+            <div class="col-md-6" >
                 <strong class="user-pic">gizdava </br> Гиздава Генева </strong>
                 </br>
                 <img  src="../../images/gizi.jpg">
             </div>
-            <div class=>
+            <div class="col-md-6">
                 <strong class="user-pic ">Mihaela_Ivanova </br> Михаела Иванова </strong>
                 </br>
                 <img src="../../images/mishi.jpg">
