--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,25 +1,44 @@
-<div>
-    <h2>GOODSIGHTS</h2>
+<link rel="stylesheet" href="../css/about.css">
+<div id="about-us">
     <div>
-        <h5>Нашата Визия</h5>
-        <div>Нашата визия е за красив, активен и предизвикателен начин на живот, който те предизвиква да грабиш с пълни шепи от света около теб</div>
-        <h5>Нашата Мисия</h5>
-        <div>Да изкараме хората от домовете им, от лаптопите и телефоните, да ги извадим от зоната им на комфорт и да видят истинската страна на света.</div>
-        <h5>Нашите ценности</h5>
-        <div>Живей колкото можеш повече</div>
-        <div>Цени онова, което имаш</div>
-        <div>Ти си авторът на собствените си граници</div>
-        <div>Красотата е навсякъде около нас</div>
-        <div>Взимай и давай само най-доброто, на което си способен</div>
-        <div>Искай още!</div>
+        <h3>Нашата Визия</h3>
+        <div class="mission">Нашата визия е за красив, активен и предизвикателен начин на живот, който те предизвиква да грабиш с пълни шепи от
+            света около теб</div>
+        <h3>Нашата Мисия</h3>
+        <div class="mission">Да изкараме хората от домовете им, от лаптопите и телефоните, да ги извадим от зоната им на комфорт и да видят истинската
+            страна на света.</div>
+        <h3>Нашите ценности</h3>
+        <ul class="mission">
+            <li>
+                Живей колкото можеш повече
+            </li>
+            <li>
+                Цени онова, което имаш
+            </li>
+            <li>
+                Ти си авторът на собствените си граници
+            </li>
+            <li>
+                Красотата е навсякъде около нас
+            </li>
+            <li>
+                Взимай и давай само най-доброто, на което си способен
+            </li>
+            <li>
+                Искай още!
+            </li>
+        </ul>
     </div>
     <div class="modal-body">
         <div class="row">
         </div>
         <p>
-            Всичко това е защото се наслаждаваме на красотата, която светът ни предоставя. Любовта ни към непознатото, неразкритите хоризонти и необятността на уроците, местата и преживяванията са нашите вдъхновения и двигателя на действията ни.
-            Радваме се да споделяме тази емоция с хора, които изпитват същото тръпнещо чувсто на задовоство и детска радост от всяко преживяване. Всички дни са възможности за нови открития, а тък само споделяме опита от вече направени такива и тайно набелязваме нови и по-прекрасни дестинации, които да превърнем в красиви спомени :)
+            Всичко това е защото се наслаждаваме на красотата, която светът ни предоставя. Любовта ни към непознатото, неразкритите хоризонти
+            и необятността на уроците, местата и преживяванията са нашите вдъхновения и двигателя на действията ни. Радваме
+            се да споделяме тази емоция с хора, които изпитват същото тръпнещо чувсто на задовоство и детска радост от всяко
+            преживяване. Всички дни са възможности за нови открития, а тък само споделяме опита от вече направени такива
+            и тайно набелязваме нови и по-прекрасни дестинации, които да превърнем в красиви спомени :)
         </p>
-        <img src="../../images/sky.jpg" alt="sky-is-not-the-limit">
+        <img src="../../images/sky.png" alt="sky-is-not-the-limit">
     </div>
 </div>
