--- a/public/templates/sights.html
+++ b/public/templates/sights.html
@@ -1,12 +1,13 @@
 <div >
-    {{#Sights}}
+    
      <div>
         <div>
-            <div>{{name}} </div>
-            <h6>Местоположение: {{location}}</h6>
-            <img src="{{ImgSrc}}" alt="{{name}}">
-            <p><a class="btn btn-success" href="#details/{{id}}" role="button">Виж още &raquo;</a></p>
+          
+            <img src="" alt="">
+            <p><a class="btn btn-success"  role="button">Виж още &raquo;</a></p>
         </div>
     </div>  
-    {{/Sights}}
+
+        <h3 class="text-danger text-center">No data in collection!</h3>
+
 </div>
