share + templates bug fixes

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -20,7 +20,7 @@
             </div>
             <p class="error hidden"></p>
             <br/>
-            <button class="btn-default">Вход</button>
+            <button class="btn-default" id="btn-login">Вход</button>
             <br/>
             <a href="#/error404"> Забравена парола?</a>
             <br/>
