--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -19,7 +19,7 @@
             <input placeholder="Повторете паролата" type="password" class="normal" id="tb-conf-pass">
             <br/>
             <p class="error hidden"></p>
-            <button class="btn-default" >Регистрация</button>
+            <button class="btn-register" >Регистрация</button>
             <br/>
             <a href="#/login">Вече имате регистрация?</a>
         </div>
