--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -39,6 +39,6 @@
             преживяване. Всички дни са възможности за нови открития, а тък само споделяме опита от вече направени такива
             и тайно набелязваме нови и по-прекрасни дестинации, които да превърнем в красиви спомени :)
         </p>
-        <img src="../../images/sky.png" alt="sky-is-not-the-limit">
+        <img src="../../images/sky.jpg" alt="sky-is-not-the-limit">
     </div>
 </div>
