--- a/public/templates/sightsAll.html
+++ b/public/templates/sightsAll.html
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-sm-6 portfolio-item">
-        <a href="#/sights" class="portfolio-link" data-toggle="modal">
+        <a href="#/mountains" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
                 </div>
@@ -12,7 +12,7 @@
         </a>
     </div>
     <div class="col-sm-6 portfolio-item">
-        <a href="#/sights" class="portfolio-link" data-toggle="modal">
+        <a href="#/caves" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
                 </div>
@@ -22,7 +22,7 @@
         </a>
     </div>
     <div class="col-sm-6 portfolio-item">
-        <a href="#/sights" class="portfolio-link" data-toggle="modal">
+        <a href="#/waterfalls" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
                 </div>
@@ -32,7 +32,7 @@
         </a>
     </div>
     <div class="col-sm-6 portfolio-item">
-        <a href="#/sights" class="portfolio-link" data-toggle="modal">
+        <a href="#/beaches" class="portfolio-link" data-toggle="modal">
             <div class="caption">
                 <div class="caption-content">
                 </div>
